--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <label for="email">Correo Electrónico:</label>
           <input type="email" id="email" name="email" required />
         </div>
-        <button type="submit">Enviar</button>
+        <button type="submit" id="start">Start</button>
       </form>
     </aside>
     <!--Fin de Formulario-->
@@ -86,13 +86,7 @@
 
     <!--Inicio de juego-->
     <div class="container">
-      <div class="imagen">
-        <img
-          class="pantalla"
-          src="Imagenes/snake-game-juego-de-la-serpierte.png"
-          alt="Imagen"
-        />
-      </div>
+      <div class="board"></div>
 
       <div class="botones">
         <div class="boton">
@@ -112,5 +106,6 @@
     <!--Fin de juego-->
 
     <footer>&copy Desarrollado por Alex Juarez Contreras 2023</footer>
+    <script type="text/javascript" src="Juego.js"></script>
   </body>
 </html>
